--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@ source/layouts/layout*.erb
 source/images/custom_logo.*
 spectacle
 dev/
-testroot/
 
 # Logs
 logs
@@ -45,3 +44,6 @@ jspm_packages
 # Optional REPL history
 .node_repl_history
 .idea
+
+# Vim
+.*.sw*
