--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
   "name": "shins",
-  "version": "2.3.2-6",
+  "version": "2.3.2-3",
   "description": "Shins Is Not Slate",
   "main": "index.js",
   "scripts": {
-    "lint": "npx eslint *.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "update": "node shins --unsafe",
-    "build": "node shins",
-    "start": "node arapaho -l"
+    "start": "node arapaho",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
     "shins": "./shins.js"
@@ -35,11 +32,11 @@
   "dependencies": {
     "call-me-maybe": "^1.0.1",
     "cheerio": "^1.0.0-rc.2",
-    "chokidar": "^3.0.2",
     "compression": "^1.6.2",
     "ejs": "^2.5.1",
     "express": "^4.15.5",
     "highlightjs": "^9.10.0",
+    "js-yaml": "latest",
     "markdown-it": "latest",
     "markdown-it-attrs": "^1.2.1",
     "markdown-it-emoji": "^1.4.0",
@@ -47,12 +44,11 @@
     "opn": "^5.2.0",
     "sanitize-html": "^1.15.0",
     "tiny-opts-parser": "0.0.3",
-    "uglify-js": "^2.7.4",
-    "yaml": "^1.7.0"
+    "uglify-js": "^2.7.4"
   },
   "devDependencies": {
     "ejs-lint": "^0.2.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.9.1",
     "node-sass-asset-functions": "^0.1.0"
   }
 }
